fix categories on mobile

--- a/src/components/ArticleHeadings/ArticleHeadings.module.scss
+++ b/src/components/ArticleHeadings/ArticleHeadings.module.scss
@@ -7,21 +7,11 @@
 	display: flex;
 	flex-direction: column;
   max-height: 70vh;
-  overflow: auto;
+  max-width: 210px;
+  overflow-y: auto;
+  overflow-x: hidden;
   padding-right: 8px;
   border-left: 2px solid var(--porcelain);
-
-	// &:before {
- //    position: absolute;
- //    display: block;
- //    background: var(--porcelain);
- //    top: 0;
- //    left: 0;
- //    content: "";
- //    width: 2px;
- //    height: 100%;
- //    border-radius: 8px;
- //  }
 
   @include responsive('phone', 'phone-xs', 'laptop') {
   	display: none;
