--- a/src/components/Category/Category.module.scss
+++ b/src/components/Category/Category.module.scss
@@ -80,9 +80,7 @@
 
 
 	@include responsive('phone-xs') {
-  	margin: 0 15px 0 0;
-  	width: 40px;
-		height: 40px;
+  	margin: 0 8px 0 0;
   }
 }
 
@@ -93,6 +91,7 @@
 
 	@include responsive('phone-xs') {
 		text-align: left;
+		margin-left: 8px;
 	}
 }
 
@@ -104,6 +103,8 @@
 
 	@include responsive('phone-xs') {
 		text-align: left;
+		margin: 0 0 0 8px;
+		@include text('body-3');
 	}
 }
 
