--- a/src/components/GettingStarted/GettingStarted.module.scss
+++ b/src/components/GettingStarted/GettingStarted.module.scss
@@ -31,6 +31,9 @@
 	margin: 0;
 	color: var(--porcelain);
 
+	@include responsive('phone-xs') {
+		@include text('body-3');
+	}
 }
 
 .traders {
