--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -53,6 +53,7 @@
 
   &:first-child {
     border-top: none;
+    margin-top: 0;
   }
 }
 
